Revert usage of new API.